OO-4071: new filter "Only courses" in "My courses"